Index.html from gpt

--- a/index.html
+++ b/index.html
@@ -1,10 +1,103 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My GitHub Pages Site</title>
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Yash Patodkar - Cover Letter & Resume</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 30px;
+      line-height: 1.6;
+    }
+    header, section {
+      margin-bottom: 2em;
+    }
+    h1, h2 {
+      color: #333;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 0.5em;
+    }
+    .contact-info {
+      font-size: 0.9em;
+      color: #555;
+    }
+    .resume-section h3 {
+      margin-top: 1.5em;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Cover Letter</h1>
+    <p class="contact-info">
+      Yash Patodkar<br>
+      <a href="mailto:ypatodkar@scu.edu">ypatodkar@scu.edu</a> | +1 669-343-4851<br>
+      <a href="https://linkedin.com/in/yash-patodkar">LinkedIn</a> | <a href="https://github.com/ypatodkar">GitHub</a>
+    </p>
+  </header>
+
+  <section>
+    <p>Dear Hiring Manager,</p>
+    <p>
+      I am thrilled to apply for the Summer Internship Program at Paramount, an opportunity that aligns perfectly with my background in computer science and my passion for working in the dynamic intersection of technology and media...
+      <!-- Include the full cover letter text here -->
+    </p>
+    <p>
+      Thank you for considering my application. I look forward to the possibility of bringing my skills, dedication, and passion to Paramount’s Summer Internship Program.
+    </p>
+    <p>Sincerely,<br>
+    Yash Patodkar</p>
+  </section>
+
+  <hr>
+
+  <section class="resume-section">
+    <h2>Resume</h2>
+    <p class="contact-info">
+      Yash Patodkar<br>
+      <a href="mailto:ypatodkar@scu.edu">ypatodkar@scu.edu</a> | +1 669-343-4851<br>
+      <a href="https://linkedin.com/in/yash-patodkar">linkedin.com/in/yash-patodkar</a> | <a href="https://github.com/ypatodkar">github.com/ypatodkar</a>
+    </p>
+    
+    <h3>Education</h3>
+    <p><strong>Santa Clara University</strong>, MS in Computer Science and Engineering, Santa Clara, CA (Sept 2024 - Present)<br>
+    <strong>Vishwakarma Institute of Technology</strong>, Bachelor of Technology, Pune, MH (Sept 2017 – May 2021)</p>
+
+    <h3>Experience</h3>
+    <p><strong>Software Development Engineer</strong> (May 2022 – June 2024)<br>
+    <em>Fortinet Technologies, Pune, MH</em></p>
+    <ul>
+      <li>Led full-stack development of the Global Visibility Dashboard for FortiSOAR using AngularJS...</li>
+      <!-- Include all bullet points from the resume here -->
+    </ul>
+
+    <h3>Projects</h3>
+    <p><strong>Book A Show</strong> | Java, Spring Boot, Spring Security, ReactJS, MySQL (Feb 2022 – Apr 2022)</p>
+    <ul>
+      <li>Developed an end-to-end movie ticketing web application...</li>
+    </ul>
+    
+    <p><strong>EduConnect</strong> | TypeScript, Node.js, Next.js, React, PostgreSQL (Aug 2017 – Apr 2018)</p>
+    <ul>
+      <li>Developed a peer-to-peer tutoring platform prototype...</li>
+    </ul>
+
+    <h3>Technical Skills</h3>
+    <p><strong>Languages:</strong> Java, Python, JavaScript, PHP, C/C++, C#, TypeScript, Kotlin<br>
+    <strong>Front-end:</strong> ReactJS, AngularJS, HTML, CSS, Bootstrap, Vue.js<br>
+    <strong>Back-End:</strong> Node.js, Spring Boot, PHP, Golang, .NET<br>
+    <strong>Databases:</strong> MySQL, PostgreSQL, MongoDB, NoSQL<br>
+    <strong>Tools & Frameworks:</strong> Docker, AWS EC2, Jenkins, Git, Visual Studio, VS Code, PyCharm, Eclipse, STS<br>
+    <strong>Methodologies:</strong> Agile (Scrum), Test-Driven Development (TDD), Rapid Prototyping<br>
+    <strong>Others:</strong> REST APIs, Microservices Architecture, Monolithic architecture, SQL, NoSQL, Data Structures, Shell Scripting, Docker, VM Management
+    </p>
+
+    <h3>Community Involvement</h3>
+    <p><strong>Volunteer Teacher (June 2024 - Sept 2024)</strong></p>
+    <ul>
+      <li>Taught Java programming to 50+ students focusing on OOP concepts...</li>
+    </ul>
+  </section>
+</body>
 </html>
