Index.html from gpt new

--- a/index.html
+++ b/index.html
@@ -4,100 +4,212 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Yash Patodkar - Cover Letter & Resume</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Using Google Fonts: Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 30px;
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f7f7f7;
+      color: #333;
       line-height: 1.6;
     }
+
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 30px 20px;
+      background: #fff;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 8px;
+      margin-top: 40px;
+      margin-bottom: 40px;
+    }
+
+    h1, h2, h3 {
+      font-weight: 600;
+      color: #222;
+      margin-bottom: 15px;
+    }
+
+    h1 {
+      font-size: 2em;
+      margin-bottom: 0.5em;
+    }
+
+    h2 {
+      font-size: 1.5em;
+      margin-top: 2em;
+    }
+
+    h3 {
+      font-size: 1.2em;
+      margin-top: 1.5em;
+    }
+
     header, section {
       margin-bottom: 2em;
     }
-    h1, h2 {
-      color: #333;
-      border-bottom: 1px solid #ccc;
-      padding-bottom: 0.5em;
-    }
+
     .contact-info {
       font-size: 0.9em;
-      color: #555;
+      color: #666;
+      margin-bottom: 1em;
     }
-    .resume-section h3 {
-      margin-top: 1.5em;
+
+    .contact-info a {
+      color: #0066cc;
+      text-decoration: none;
+    }
+
+    .contact-info a:hover {
+      text-decoration: underline;
+    }
+
+    .divider {
+      border-bottom: 1px solid #ddd;
+      margin: 2em 0;
+    }
+
+    ul {
+      list-style: disc;
+      padding-left: 20px;
+    }
+
+    .resume-section {
+      margin-bottom: 2em;
+    }
+
+    p {
+      margin-bottom: 1em;
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 600px) {
+      .container {
+        padding: 20px 15px;
+      }
+
+      h1 {
+        font-size: 1.8em;
+      }
+
+      h2 {
+        font-size: 1.4em;
+      }
+
+      h3 {
+        font-size: 1.1em;
+      }
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Cover Letter</h1>
-    <p class="contact-info">
-      Yash Patodkar<br>
-      <a href="mailto:ypatodkar@scu.edu">ypatodkar@scu.edu</a> | +1 669-343-4851<br>
-      <a href="https://linkedin.com/in/yash-patodkar">LinkedIn</a> | <a href="https://github.com/ypatodkar">GitHub</a>
-    </p>
-  </header>
+  <div class="container">
+    <header>
+      <h1>Cover Letter</h1>
+      <p class="contact-info">
+        Yash Patodkar<br>
+        <a href="mailto:ypatodkar@scu.edu">ypatodkar@scu.edu</a> | +1 669-343-4851<br>
+        <a href="https://linkedin.com/in/yash-patodkar">LinkedIn</a> | <a href="https://github.com/ypatodkar">GitHub</a>
+      </p>
+    </header>
 
-  <section>
-    <p>Dear Hiring Manager,</p>
-    <p>
-      I am thrilled to apply for the Summer Internship Program at Paramount, an opportunity that aligns perfectly with my background in computer science and my passion for working in the dynamic intersection of technology and media...
-      <!-- Include the full cover letter text here -->
-    </p>
-    <p>
-      Thank you for considering my application. I look forward to the possibility of bringing my skills, dedication, and passion to Paramount’s Summer Internship Program.
-    </p>
-    <p>Sincerely,<br>
-    Yash Patodkar</p>
-  </section>
+    <section>
+      <p>Dear Hiring Manager,</p>
+      <p>
+        I am thrilled to apply for the Summer Internship Program at Paramount, an opportunity that aligns perfectly with my background in computer science and my passion for working in the dynamic intersection of technology and media. As a Master of Science in Computer Science student at Santa Clara University, I am drawn to Paramount’s innovative approach to creating premium content and experiences for global audiences.
+      </p>
+      <p>
+        My academic and professional journey has equipped me with a blend of technical and project management skills that I believe will make me an asset to your team:
+      </p>
+      <p>
+        <strong>Project Management and Process Optimization:</strong> During my time at Fortinet, I worked on the FortiSOAR product, where I contributed to high-level project planning, task management, and risk identification within a microservices architecture. I also collaborated with cross-functional teams to streamline business processes, ensuring the delivery of high-quality features and bug fixes. My familiarity with Agile methodologies and tools like Jira positions me to excel in operational and project management roles at Paramount.
+      </p>
+      <p>
+        <strong>Technical Documentation and Communication:</strong> In addition to coding, I have prepared comprehensive documentation and help guides for projects, which played a key role in onboarding new team members and ensuring consistent project delivery. My ability to communicate complex technical ideas clearly aligns with the program’s emphasis on collaboration across multiple functional teams.
+      </p>
+      <p>
+        <strong>Technical Expertise:</strong> My hands-on experience includes full-stack development, API integration, and technology application testing. At Fortinet, I utilized programming languages like Java, Python, and JavaScript, frameworks like ReactJS and Spring Boot, and tools such as Git and Google Suite, all of which have honed my technical proficiency and problem-solving abilities.
+      </p>
+      <p>
+        <strong>Creative and Analytical Thinking:</strong> While pursuing my PG-Diploma in Advanced Computing at CDAC Pune, I tackled challenges such as designing scalable databases and deciding between monolithic and microservices architectures for our movie ticket booking app. These experiences have instilled in me a robust analytical mindset, which I am eager to bring to Paramount’s technology projects.
+      </p>
+      <p>
+        Paramount’s dedication to fostering creativity and collaboration resonates deeply with me, as does the opportunity to work on projects that influence culture and entertainment on a global scale. I am particularly excited about the prospect of contributing to your technology team’s innovation and operational success while learning from industry leaders.
+      </p>
+      <p>
+        Thank you for considering my application. I look forward to the possibility of bringing my skills, dedication, and passion to Paramount’s Summer Internship Program.
+      </p>
+      <p>Sincerely,<br>
+        Yash Patodkar
+      </p>
+    </section>
 
-  <hr>
+    <div class="divider"></div>
 
-  <section class="resume-section">
-    <h2>Resume</h2>
-    <p class="contact-info">
-      Yash Patodkar<br>
-      <a href="mailto:ypatodkar@scu.edu">ypatodkar@scu.edu</a> | +1 669-343-4851<br>
-      <a href="https://linkedin.com/in/yash-patodkar">linkedin.com/in/yash-patodkar</a> | <a href="https://github.com/ypatodkar">github.com/ypatodkar</a>
-    </p>
-    
-    <h3>Education</h3>
-    <p><strong>Santa Clara University</strong>, MS in Computer Science and Engineering, Santa Clara, CA (Sept 2024 - Present)<br>
-    <strong>Vishwakarma Institute of Technology</strong>, Bachelor of Technology, Pune, MH (Sept 2017 – May 2021)</p>
+    <section class="resume-section">
+      <h2>Resume</h2>
+      <p class="contact-info">
+        Yash Patodkar<br>
+        <a href="mailto:ypatodkar@scu.edu">ypatodkar@scu.edu</a> | +1 669-343-4851<br>
+        <a href="https://linkedin.com/in/yash-patodkar">linkedin.com/in/yash-patodkar</a> | <a href="https://github.com/ypatodkar">github.com/ypatodkar</a>
+      </p>
 
-    <h3>Experience</h3>
-    <p><strong>Software Development Engineer</strong> (May 2022 – June 2024)<br>
-    <em>Fortinet Technologies, Pune, MH</em></p>
-    <ul>
-      <li>Led full-stack development of the Global Visibility Dashboard for FortiSOAR using AngularJS...</li>
-      <!-- Include all bullet points from the resume here -->
-    </ul>
+      <h3>Education</h3>
+      <p><strong>Santa Clara University</strong>, MS in Computer Science and Engineering, Santa Clara, CA (Sept 2024 - Present)<br>
+      <strong>Vishwakarma Institute of Technology</strong>, Bachelor of Technology, Pune, MH (Sept 2017 – May 2021)</p>
 
-    <h3>Projects</h3>
-    <p><strong>Book A Show</strong> | Java, Spring Boot, Spring Security, ReactJS, MySQL (Feb 2022 – Apr 2022)</p>
-    <ul>
-      <li>Developed an end-to-end movie ticketing web application...</li>
-    </ul>
-    
-    <p><strong>EduConnect</strong> | TypeScript, Node.js, Next.js, React, PostgreSQL (Aug 2017 – Apr 2018)</p>
-    <ul>
-      <li>Developed a peer-to-peer tutoring platform prototype...</li>
-    </ul>
+      <h3>Experience</h3>
+      <p><strong>Software Development Engineer</strong> (May 2022 – June 2024)<br>
+      <em>Fortinet Technologies, Pune, MH</em></p>
+      <ul>
+        <li>Led full-stack development of the Global Visibility Dashboard for FortiSOAR using AngularJS, resulting in a 30% improvement in incident response times.</li>
+        <li>Designed and implemented data visualization widgets (Funnel Chart, Top-X, Record Summary Cards, Tiles) using JavaScript and D3.js, increasing user engagement by 25%.</li>
+        <li>Built Playbooks from scratch for data aggregation, automating incident reporting and system management.</li>
+        <li>Developed an AI-driven bot using GPT-4, Python, and ChromaDB for playbook generation and conversational assistance.</li>
+        <li>Built RESTful APIs and connectors in Python for seamless integration with external systems like Google Drive, OpenAI, Microsoft Exchange.</li>
+        <li>Enhanced backend operations with Java Spring Boot and optimized the AngularJS frontend, improving system stability and performance.</li>
+        <li>Worked within a microservices architecture, deploying applications using AWS EC2 and Docker, and managed CI/CD with Jenkins.</li>
+        <li>Collaborated with cross-functional teams to ensure adherence to Engineering Excellence practices and timely feature releases.</li>
+      </ul>
 
-    <h3>Technical Skills</h3>
-    <p><strong>Languages:</strong> Java, Python, JavaScript, PHP, C/C++, C#, TypeScript, Kotlin<br>
-    <strong>Front-end:</strong> ReactJS, AngularJS, HTML, CSS, Bootstrap, Vue.js<br>
-    <strong>Back-End:</strong> Node.js, Spring Boot, PHP, Golang, .NET<br>
-    <strong>Databases:</strong> MySQL, PostgreSQL, MongoDB, NoSQL<br>
-    <strong>Tools & Frameworks:</strong> Docker, AWS EC2, Jenkins, Git, Visual Studio, VS Code, PyCharm, Eclipse, STS<br>
-    <strong>Methodologies:</strong> Agile (Scrum), Test-Driven Development (TDD), Rapid Prototyping<br>
-    <strong>Others:</strong> REST APIs, Microservices Architecture, Monolithic architecture, SQL, NoSQL, Data Structures, Shell Scripting, Docker, VM Management
-    </p>
+      <h3>Projects</h3>
+      <p><strong>Book A Show</strong> | Java, Spring Boot, Spring Security, ReactJS, MySQL (Feb 2022 – Apr 2022)</p>
+      <ul>
+        <li>Developed an end-to-end movie ticketing web application with a ReactJS frontend and Spring Boot backend.</li>
+        <li>Implemented role-based authentication for Admin, Theatre Owner, and Users using Spring Security.</li>
+        <li>Overcame challenges in seat numbering and layout, ensuring a seamless user experience.</li>
+      </ul>
 
-    <h3>Community Involvement</h3>
-    <p><strong>Volunteer Teacher (June 2024 - Sept 2024)</strong></p>
-    <ul>
-      <li>Taught Java programming to 50+ students focusing on OOP concepts...</li>
-    </ul>
-  </section>
+      <p><strong>EduConnect</strong> | TypeScript, Node.js, Next.js, React, PostgreSQL (Aug 2017 – Apr 2018)</p>
+      <ul>
+        <li>Built a peer-to-peer tutoring platform prototype with real-time communication features using WebSockets.</li>
+        <li>Focused on user-centric design and responsiveness to ensure accessibility across devices.</li>
+      </ul>
+
+      <h3>Technical Skills</h3>
+      <p>
+        <strong>Languages:</strong> Java, Python, JavaScript, PHP, C/C++, C#, TypeScript, Kotlin<br>
+        <strong>Front-end:</strong> ReactJS, AngularJS, HTML, CSS, Bootstrap, Vue.js<br>
+        <strong>Back-End:</strong> Node.js, Spring Boot, PHP, Golang, .NET<br>
+        <strong>Databases:</strong> MySQL, PostgreSQL, MongoDB, NoSQL<br>
+        <strong>Tools & Frameworks:</strong> Docker, AWS EC2, Jenkins, Git, Visual Studio, VS Code, PyCharm, Eclipse, STS<br>
+        <strong>Methodologies:</strong> Agile (Scrum), Test-Driven Development (TDD), Rapid Prototyping<br>
+        <strong>Others:</strong> REST APIs, Microservices Architecture, Monolithic architecture, SQL, NoSQL, Data Structures, Shell Scripting, Docker, VM Management
+      </p>
+
+      <h3>Community Involvement</h3>
+      <p><strong>Volunteer Teacher (June 2024 - Sept 2024)</strong></p>
+      <ul>
+        <li>Taught Java programming to 50+ students, focusing on OOP concepts and principles.</li>
+        <li>Conducted Math doubt-solving sessions for students in classes 8th, 9th, and 10th.</li>
+      </ul>
+    </section>
+  </div>
 </body>
 </html>
