--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         <p class="subtitle">Software Engineer specializing in Backend Development &amp; AI. Currently based in Santa Clara, CA.</p>
         <div class="cta-row">
           <a class="btn primary" href="#projects">View Projects</a>
-          <a class="btn ghost" href="resume.pdf" download>Download Résumé</a>
+          <a class="btn ghost" href="Yash Patodkar Resume.pdf" download>Download Résumé</a>
         </div>
       </div>
       <div class="hero-card">
