Add Threat Detection System and Resume Auto Editor projects, reorder projects with live links at top, remove About section

--- a/index.html
+++ b/index.html
@@ -333,10 +333,9 @@
     <div class="container nav">
       <a class="brand" href="#">YP</a>
       <nav id="nav-menu" class="nav-links">
-        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
         <a href="#experience">Experience</a>
         <a href="#education">Education</a>
-        <a href="#projects">Projects</a>
         <a href="#skills">Skills</a>
         <a href="#contact">Contact</a>
       </nav>
@@ -373,12 +372,80 @@
       </div>
     </section>
 
-    <!-- ABOUT -->
-    <section id="about" class="section container animated-section">
-      <h2 class="section-title">About Me</h2>
-      <p class="about">
-        I'm a software engineer with a passion for building robust backend systems and intelligent, AI-assisted applications. With industry experience at Fortinet and currently pursuing my Master’s at Santa Clara University, I'm eager to tackle new challenges and contribute to innovative projects. I am actively seeking Software Engineering / Machine Learning internship opportunities.
-      </p>
+    <!-- PROJECTS -->
+    <section id="projects" class="section container animated-section">
+      <h2 class="section-title">Projects</h2>
+      <div class="gallery">
+        <article class="card project" data-modal="modal5">
+          <div class="thumb">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M3 3v18h18"/><path d="M7 12h10"/><path d="M7 16h8"/><path d="M7 8h6"/><path d="M18 8v4"/><path d="M16 10h4"/></svg>
+          </div>
+          <div class="card-body">
+            <h3>Sports Analytics Platform</h3>
+            <p>Full-stack stats app with Gemini AI and real-time visualizations for 5+ sports.</p>
+          </div>
+        </article>
+
+        <article class="card project" data-modal="modal6">
+          <div class="thumb">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/><path d="M9 12l2 2 4-4"/></svg>
+          </div>
+          <div class="card-body">
+            <h3>Threat Detection System</h3>
+            <p>SOC platform with rule-based anomaly detection for security logs from multiple sources.</p>
+          </div>
+        </article>
+
+        <article class="card project" data-modal="modal1">
+          <div class="thumb">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2Z"/><path d="M12 18a6 6 0 0 0-6-6 4 4 0 0 1 0-8"/><path d="M12 18a6 6 0 0 1 6-6 4 4 0 0 0 0-8"/></svg>
+          </div>
+          <div class="card-body">
+            <h3>Re‑Mind AI</h3>
+            <p>Mental‑health tracker with on‑device RAG to identify cognitive distortions.</p>
+          </div>
+        </article>
+
+        <article class="card project" data-modal="modal7">
+          <div class="thumb">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><path d="M14 2v6h6"/><path d="M16 13H8"/><path d="M16 17H8"/><path d="M10 9H8"/></svg>
+          </div>
+          <div class="card-body">
+            <h3>Resume Auto Editor</h3>
+            <p>AI-powered resume optimizer using Gemini AI to match job descriptions and auto-apply edits to Google Docs.</p>
+          </div>
+        </article>
+
+        <article class="card project" data-modal="modal2">
+          <div class="thumb">
+             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M2 9a3 3 0 0 1 3-3h14a3 3 0 0 1 3 3v10a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3Z"/><path d="m14.5 12.5-3-3-3 3"/><path d="M2 13h20"/></svg>
+          </div>
+          <div class="card-body">
+            <h3>Ticket Booking Platform</h3>
+            <p>Full-stack app (Spring Boot + React) with RBAC and secure seat selection.</p>
+          </div>
+        </article>
+
+        <article class="card project" data-modal="modal3">
+          <div class="thumb">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M20 3H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2Z"/><path d="m9 15-3-3 3-3"/><path d="M13 15h5"/></svg>
+          </div>
+          <div class="card-body">
+            <h3>Presentation Suite</h3>
+            <p>Adobe Express add‑on that generates slide decks from prompts using Gemini.</p>
+          </div>
+        </article>
+
+        <article class="card project" data-modal="modal4">
+          <div class="thumb">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="18" cy="18" r="3"/><circle cx="6" cy="6" r="3"/><path d="M6 21V9a9 9 0 0 1 9 9"/><path d="M18 3v12a9 9 0 0 1-9-9"/></svg>
+          </div>
+          <div class="card-body">
+            <h3>GitHub PR Analyzer</h3>
+            <p>AI-powered PR review system with LLM-based automation and RAG for code insights.</p>
+          </div>
+        </article>
+      </div>
     </section>
 
     <!-- EXPERIENCE -->
@@ -434,62 +501,6 @@
             </div>
           </li>
       </ol>
-    </section>
-
-    <!-- PROJECTS -->
-    <section id="projects" class="section container animated-section">
-      <h2 class="section-title">Projects</h2>
-      <div class="gallery">
-        <article class="card project" data-modal="modal1">
-          <div class="thumb">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2Z"/><path d="M12 18a6 6 0 0 0-6-6 4 4 0 0 1 0-8"/><path d="M12 18a6 6 0 0 1 6-6 4 4 0 0 0 0-8"/></svg>
-          </div>
-          <div class="card-body">
-            <h3>Re‑Mind AI</h3>
-            <p>Mental‑health tracker with on‑device RAG to identify cognitive distortions.</p>
-          </div>
-        </article>
-
-        <article class="card project" data-modal="modal2">
-          <div class="thumb">
-             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M2 9a3 3 0 0 1 3-3h14a3 3 0 0 1 3 3v10a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3Z"/><path d="m14.5 12.5-3-3-3 3"/><path d="M2 13h20"/></svg>
-          </div>
-          <div class="card-body">
-            <h3>Ticket Booking Platform</h3>
-            <p>Full-stack app (Spring Boot + React) with RBAC and secure seat selection.</p>
-          </div>
-        </article>
-
-        <article class="card project" data-modal="modal3">
-          <div class="thumb">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M20 3H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2Z"/><path d="m9 15-3-3 3-3"/><path d="M13 15h5"/></svg>
-          </div>
-          <div class="card-body">
-            <h3>Presentation Suite</h3>
-            <p>Adobe Express add‑on that generates slide decks from prompts using Gemini.</p>
-          </div>
-        </article>
-
-        <article class="card project" data-modal="modal4">
-          <div class="thumb">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="18" cy="18" r="3"/><circle cx="6" cy="6" r="3"/><path d="M6 21V9a9 9 0 0 1 9 9"/><path d="M18 3v12a9 9 0 0 1-9-9"/></svg>
-          </div>
-          <div class="card-body">
-            <h3>GitHub PR Analyzer</h3>
-            <p>AI-powered PR review system with LLM-based automation and RAG for code insights.</p>
-          </div>
-        </article>
-
-        <article class="card project" data-modal="modal5">
-          <div class="thumb">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M3 3v18h18"/><path d="M7 12h10"/><path d="M7 16h8"/><path d="M7 8h6"/><path d="M18 8v4"/><path d="M16 10h4"/></svg>
-          </div>
-          <div class="card-body">
-            <h3>Sports Analytics Platform</h3>
-            <p>Full-stack stats app with Gemini AI and real-time visualizations for 5+ sports.</p>
-          </div>
-        </article>
-      </div>
     </section>
 
     <!-- SKILLS -->
@@ -602,6 +613,36 @@
       <p>Created a full-stack sports statistics app using React, TypeScript, and Gemini AI with Search Grounding for 95% accurate stats across 5+ sports, featuring custom visualizations with Chart.js. Deployed a serverless backend using AWS Lambda and API Gateway that handles 1,000+ monthly requests with less than 2 seconds of latency. Implemented CI/CD via AWS Amplify for 99.9% uptime, ensuring global HTTPS access for all users.</p>
       <div class="modal-actions">
         <a class="btn primary" target="_blank" href="https://main.d3218t3euk8dbo.amplifyapp.com/">Live Demo</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal" id="modal6" role="dialog" aria-modal="true" aria-labelledby="m6title" aria-hidden="true">
+    <div class="modal-content">
+      <button class="close" aria-label="Close">×</button>
+      <h3 id="m6title">Threat Detection System</h3>
+      <p>A comprehensive Security Operations Center (SOC) management platform that analyzes security logs from multiple sources to identify potential threats and suspicious patterns using rule-based anomaly detection. The system supports dual log types (Zscaler Web Security logs and Apache/Nginx access logs) with 5 specialized detection algorithms per log type, each assigning anomaly scores (0.0-1.0) with confidence levels.</p>
+      <p><strong>Key Features:</strong> Real-time log analysis and parsing, automated anomaly detection with 10 total detection rules, interactive dashboards with visual statistics, advanced search capabilities by IP, user, URL, and status code, multi-user support with authentication, and progress tracking for uploads.</p>
+      <p><strong>Technologies:</strong> React 18, Node.js, Express.js, PostgreSQL, AWS Lambda (serverless backend), AWS Amplify (frontend hosting), bcryptjs for security, and Multer for file uploads.</p>
+      <p><strong>Detection Capabilities:</strong> Excessive traffic detection, blocked request spikes, threat classification detection, repeated error patterns, unusual URL patterns (SQL injection, XSS), suspicious user-agents, and non-standard HTTP methods.</p>
+      <div class="modal-actions">
+        <a class="btn primary" target="_blank" href="https://main.djqvks4i9xlkw.amplifyapp.com">Live Demo</a>
+        <a class="btn" target="_blank" href="https://github.com/ypatodkar/threat-detection-zscaler">GitHub</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal" id="modal7" role="dialog" aria-modal="true" aria-labelledby="m7title" aria-hidden="true">
+    <div class="modal-content">
+      <button class="close" aria-label="Close">×</button>
+      <h3 id="m7title">Resume Auto Editor</h3>
+      <p>An AI-powered resume optimization tool that automatically tailors your resume to match job descriptions using Google's Gemini AI. The system analyzes job requirements, extracts relevant keywords, and generates targeted edits that can be automatically applied directly to Google Docs while preserving formatting.</p>
+      <p><strong>Key Features:</strong> Automatic keyword extraction from job descriptions, smart decision-making that only changes what's necessary, summary optimization (under 34 words), technical skills alignment, project point updates (max 25 words when needed), formatting preservation in Google Docs, and partial text replacements throughout the resume.</p>
+      <p><strong>Technologies:</strong> Python (Flask), React frontend, Google Gemini AI API, Google Docs API integration, Python-docx for Word document processing, and OAuth 2.0 for Google authentication.</p>
+      <p><strong>Usage Options:</strong> Command-line scripts for batch processing, Flask REST API for programmatic access, and React web UI for interactive resume optimization with real-time results.</p>
+      <div class="modal-actions">
+        <a class="btn primary" target="_blank" href="https://main.d1hmnkmby0w01s.amplifyapp.com/">Live Demo</a>
+        <a class="btn" target="_blank" href="https://github.com/ypatodkar/resume-auto-editor">GitHub</a>
       </div>
     </div>
   </div>
